syntax = "proto3";

package pb;

import "item.proto";

option go_package = "github.com/machearn/galaxy_service/pb";

message UpdateItemRequest {
    int32 id = 1;
    optional string name = 2;
    optional int32 quantity = 3;
    optional int32 price = 4;
}

message UpdateItemResponse {
    Item item = 1;
}